added font awesome lib and updated toggling of music

--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
         <title>Super Mario</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
+        <link rel="stylesheet" href="./font-awesome-4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="css.css" type="text/css">        
     </head>
    
     <body>
         <div id='content' class='background'>
             <div class='center-content'>
-                <h3 class='readyPrompt'>Turn On Your Sound!</h3>
+                <div class="musicNotification">
+                    <h3 class="readyPrompt">Turn On Your Sound!</h3>
+                    <i class="fa fa-music" aria-hidden="true"></i>
+                </div>
 
                 <img class='mario' src="images/runningMario.gif" alt="super-mario running" /> 
                 <img class='coin' src="images/coin.png" alt="coin" />
