--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
     <head>
         <title>Super Mario</title>
         <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
+        <meta name="description" content="Super Mario">
+        <meta name="author" content="IL">
         <link rel="stylesheet" href="./font-awesome-4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="css.css" type="text/css">        
     </head>
